# mininject

./: .gitignore  README.md  container.py  injectable.py  mininject.py  pyproject.toml
example/: app.py  component.py  config.py  containers.py  main.py
src/mininject/: __init__.py  container.py  injectable.py  mininject.py
tests/: test_container.py  test_injectable.py  test_mininject.py
